--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,21 +3,43 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #000;
+  color: #fff !important;
+}
+
+
+@media screen and (max-width: 712px) {
+  h1 {
+    font-size: 32px !important;
+    line-height: normal !important;
+  }
+
+  .addBg {
+    background-color: #00000080 !important;
+  }
+
+  .addFlexCent {
+    justify-content: center;
+  }
+}
+
+
+p {
+  font-size: 18px;
 }
 
 @layer utilities {
