--- a/src/components/CommonStyles.module.css
+++ b/src/components/CommonStyles.module.css
@@ -61,3 +61,25 @@
         display: block;
     }
 }
+
+         
+.btnStyle1 {
+    background-image: linear-gradient(to right, #603813 0%, #b29f94  51%, #603813  100%);
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+    width: 100%;
+  }
+
+  .btnStyle1:hover {
+    background-position: right center;
+    color: #fff;
+    text-decoration: none;
+  }
+ 
