new landing page...

--- a/src/components/CommonStyles.module.css
+++ b/src/components/CommonStyles.module.css
@@ -64,7 +64,7 @@
 
          
 .btnStyle1 {
-    background-image: linear-gradient(to right, #603813 0%, #b29f94  51%, #603813  100%);
+    background-image: linear-gradient(to right, #870000 0%, #190A05  51%, #870000  100%);
     padding: 15px 45px;
     text-align: center;
     text-transform: uppercase;
@@ -79,6 +79,27 @@
 
   .btnStyle1:hover {
     background-position: right center;
+    color: #fff;
+    text-decoration: none;
+  }
+ 
+           
+  .btn-grad {
+    background-image: linear-gradient(to right, #870000 0%, #190A05  51%, #870000  100%);
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+  }
+
+  .btn-grad:hover {
+    background-position: right center; /* change the direction of the change here */
     color: #fff;
     text-decoration: none;
   }
