--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     height: 72px;
-    padding: 0 6rem;
+    padding: 4rem 6rem;
     align-items: center;
 }
 
